--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -6,4 +6,24 @@
 body {
     color: white;
     font-family: sans-serif;
+
+    ::-webkit-scrollbar {
+        height: 8px;
+    }
+    
+    /* Track */
+    ::-webkit-scrollbar-track {
+        background: #434343; 
+    }
+    
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background: rgb(102, 102, 102); 
+    }
+    
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover{
+        background: rgb(170, 170, 170); 
+    }
 }
